apps/base/immich/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: immich.dev.myrobertson.net
spec:
  gatewayClassName: istio
  listeners:
  - name: immich
    hostname: immich.dev.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: immich-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: immich.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
  - name: immich
    namespace: immich
  hostnames: ["immich.dev.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      namespace: immich
      port: 2283
